45
================

12/08/21 Annual figures return count including non-adoptions
11/08/21 Show receipt numbers with transactions
11/08/21 Option to show waiting list number in columns
06/08/21 Only set default death reason if deceased date was blank
06/08/21 Don't update lastchanged person on reparented/merged records
30/07/21 Option to view returned equipment loans
23/07/21 adoptable_js: Support full size images
14/07/21 OriginalOwner should always sync to Owner on non-shelter
13/07/21 Rename trap loan wordkeys to equipment, update manual #775
13/07/21 Add <<OwnerSite>> key for person documents
08/07/21 Do not load report toolbar with subreports
08/07/21 Prevent report toolbar loading multiple times
08/07/21 Allow hidden config for date diff cutoffs
08/07/21 Remove inactive log types from log type filter
07/07/21 Mandatory handling for Yes/No (Jacob Sabella) #1028
06/07/21 Separate permissions for import/export CSV #1024
06/07/21 Validate transport dates, pickup cannot be > dropoff #1025
03/07/21 Fix phone number formatting on embedded add person
30/06/21 Emblem to indicate animal has a future adoption #1021
29/06/21 Button to remove processed forms from incoming forms screen
26/06/21 Fix for resolving images in PDFs with later Python/HTMLParser
24/06/21 DateAvailableForAdoption wordkey and view/QB field #619
24/06/21 Rename trap loans to equipment loans #775
23/06/21 Querybuilder criteria for tests, extra emblems
22/06/21 Option to add pickup location/address to new animals #442
21/06/21 Strip vet info and owner name field from adoptable_js
21/06/21 Strip script tags properly before feeding to PDF converter
21/06/21 Generate monthly/annual figures when the report is requested #913
21/06/21 Add report toolbar with email/export to CSV/PDF #313
17/06/21 Fix for scaling images with alpha channel to JPG
16/06/21 Do not allow link fields to be removed from find screens #870
15/06/21 Show longer descriptions in calendar listview for tablets #976