@@ -1,6 +1,7 @@
 45
 ================
 
+16/08/21 Add current vet as a suggested email from animal
 12/08/21 Annual figures return count including non-adoptions
 11/08/21 Show receipt numbers with transactions
 11/08/21 Option to show waiting list number in columns
